weightable_practice_scaffolding/app/assets/stylesheets/users.css.scss
// Place all the styles related to the Users controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

#home-pg-bg { 
  background-image: url('weightable_background2.jpg');
  background-repeat: no-repeat;
}

@media(max-width:991px){
  #home-pg-bg { 
  background-size: cover;
  width: 100%;
  }

}

  @media(min-width:992px){
  #home-pg-bg { 
    background-size: contain;
    scale: 88%;
  }

}

.main-pad{
  padding-bottom:100px;
}

td {
  padding-right: 15px;
  padding-left: 15px;
}


.progress-container {
  display: inline-block;
  width: 100%;
}

#handwriting {
  font-family: 'Dancing Script', cursive;
  font-size: 2em;
}

h1 {
  font-family: 'Open Sans', sans-serif;
  font-size: 2.5em;
  font-weight: 300; 
}

h3 {
  font-family: 'Open Sans', sans-serif;
  font-size: 2em;
}

h1.home-header {
  margin-top: 40px;
  font-family: 'Open Sans', sans-serif;
  font-size: 3.2em;
  font-weight: 600;
  color: white;
  letter-spacing: -0.05em
}

h3.home-sub {
  margin-top:0;
  margin-bottom: 25px;
  font-family: 'Open Sans', sans-serif;
  font-size: 2.2em;
  font-weight: 300;
  color: white;
  letter-spacing: -0.05em
}

.login {
  text-align: center;
  color: white;

}

.login-text {
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
}

.facebook-btn{
  height: 40px;
  width: 80%;
  color: white;
  background: #446792;
  line-height: 40px;
  margin: 15px 0 7px 10%;
}

.sign-in-btn{
  background-color: #1e8495;
  border-color: #186977 !important;
  border-radius: 0;
  color:white;
  margin: 15px 0 7px 0;
  &:hover {
    background-color: #186977;
    border-color: #186977;
    color:white;
  }
}

.home-sm-txt{
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  text-align: left;
}

.pass-pad {
  padding-top: 10px;
}

.left-pad{
  padding-left: 5px;
}

.sign-in-pad {
  padding-top: 30px;
}

.vert-rule{
  margin-top: 40px;
  width:3px;
  height:300px;
  background: rgba(255,255,255,.3);
}

.new-mem-vert-pos {
  padding-top: 120px;
}

.mid-margin{
  margin:0 auto;
}

.pic {
  margin-top:20px;
}

.list {
  text-align: left;
  width: 40%;
  margin-left: 10px;
  margin-right: 10px;
  font-size: 1.25em;
  font-family: 'Open Sans', sans-serif;
  margin-top: 5px;
}

.newToWeightable {
  display: inline;
  padding-left: 10px;
}

.breaker {
  clear: both;
}

.testimonial {
  width: 320px;
  height: 227px;
  background-color: white;
  margin: 25px;
  display: inline-block;
  padding: 10px;
  p {
  font-family: 'Open Sans', sans-serif;
  }
}

.testimonial_picture {
  margin-right: 10px;
  display: block;
  float: left;
}

.testimonial_text {
  font-size: 1.45em;
  line-height: 25px;
}

.profile-pic {

  height: 200px;
  width: 200px;
  border: 8px solid #fff;
  box-shadow: 0 0 0 1px #beb9b5; 
}

.comment-prof-pic{
  border: 2px solid gray;
}

.round-pic{
  border-radius: 50%;
}

.profile-pad {
  padding-top: 40px;
}

.no-horiz-pad {
  padding-left: 0px;
  padding-right: 0px;
}

.neg-margin {
  margin-left: 0px;
}

.username {
  margin:-10px 0;
}

.inline-text {
  display: inline;
}

.edit-goal-pad {
  padding-left: 20px;
}

.weighin-friend-text {
  padding-top: 20px;
  color: #228295;
  span {
    font-size:1.3em;
  }
}
.about-me{
    padding-left: 0px;
    padding-right: 0px;
    padding-top: 30px;
    padding-bottom: 30px;
}

.wi-btn{
  background: #e75735;
  height:38px;
  line-height: 38px;
  text-align: center;
  z-index: 1;
  p {
  color: white;
  }
}

.wi-panel {
  background-color: #dbd7d6;
  border: 2px solid #c1bcb8;
}

.btn-center {
  margin-left: 7px;
}

#progressbar div {
	background: green;
	height: 29px;
}

.prog-bar-con {
  margin-top: 20px;
}

.prog-bar-base{
  width: 100%;
  height:50px;
  background-color: #dbd7d6;
  border: 2px solid #c1bcb8;
}

.prog-bar-base-small {
  position: absolute;
  width: 93%;
  height:20px;
  background-color: white;
  margin-top: -50px;
}

.prog-bar-overlay{
  position: absolute;
  height:50px;
  margin-top: -50px;
  background-color: #4ec67c;
  border: 2px solid #4ca16c;
}

.prog-bar-overlay-small {
  position: absolute;
  height:20px;
  margin-top: -50px;
  background-color: #4ec67c;
  opacity: .5;
}

#progress-label{
    text-align: center;
    padding-top: 20px;
    font-size: 1.6em;
    color: #4ec67c;
}

.goal-date-con {
  margin-top: 27px;
  margin-left: 10px;

}
/* Left Content */

/* Stats */
.chart-container {
  background-color: white;
  padding: 10px;
  margin-top: 50px;
  border: 1px solid #dddddd;
}
/* Green Dashboard */
.green-dashboard {
  background-color: #4ec67c;
  width: 100%;
  margin: 0 auto;
  border: 1px solid #4ca16c;
  padding: 20px;
  color: white;
}

.green-box-headers {
  font-family: "Open Sans";
  font-weight: light;
  text-align: center;
  margin-bottom: 25px;
}


@media(max-width:767px){
  .dash-element.goal-proj {
    height: 145px;
  }
}


.record-weight {
  font-size: 30px;
  font-weight: 100;
  opacity: .6;
}

.data-subheader{
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
  font-size: 16px;
  opacity: .6;
}

.record-weight-trophy {
  font-size: 30px;
  display: block;
  opacity: .6;
  letter-spacing: 5px;
}

.dashboard-data-container {
  text-align: center
}

.dashboard-data {
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
  font-size: 50px;
  
}

.dashboard-data.goal-projection-status {
  margin: 45px 0 20px 0;
  font-size: 40px;
  letter-spacing: .9
}

.dash-element {
  height: 200px;

}

.goal-projection-status,.bmi-index {
  margin: 55px 0 20px 0;
  letter-spacing: .9
}

@media(max-width:991px){
  .dashboard-data.goal-projection-status {
    font-size: 30px !important ;
  }
}

@media(max-width:767px){
  .dashboard-data.goal-projection-status {
    font-size: 40px !important ;
  }
}
/* ... */

